# sqz

./: .editorconfig  .gitattributes  .gitignore  LICENSE  NOTICE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md
docs/plans/: v1.2-reclaimable-projection.md
screenshots/: README.md  banner.html  banner.mjs  capture.mjs  harness.html  harness.tsx  marketing.mjs  scenes.ts
scripts/: fetch-ffmpeg.ps1  fetch-ffmpeg.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: commands.rs  events.rs  ffsetup.rs  lib.rs  main.rs  run.rs
src-tauri/src/core/: abort.rs  config.rs  decode.rs  discover.rs  encode.rs  encoders.rs  estimate.rs  ffbin.rs  fswatch.rs  health.rs  hwcaps.rs  idle.rs  library.rs  lock.rs  manifest.rs  mod.rs  paths.rs  pipeline.rs  probe.rs  replace.rs  report.rs  schedule.rs  util.rs  verify.rs  vmaf.rs
src/components/: AdvancedOptions.tsx  AutomationPanel.tsx  CloseWarningModal.tsx  Collapsible.tsx  ConfirmModal.tsx  DropZone.tsx  EncoderPanel.tsx  EventLog.tsx  FfmpegSetup.tsx  LibraryEditor.tsx  LiveFiles.tsx  PasswordModal.tsx  QualityPresets.tsx  ReclaimPanel.tsx  Select.tsx  StatusCard.tsx  WorkerBars.tsx  atoms.tsx  icons.tsx
src/lib/: accent.ts  api.ts  closeBehavior.ts  config.ts  cursor.ts  events.ts  format.ts  lock.tsx  mask.ts  probes.tsx  status.ts  status.tsx  store.tsx  theme.ts  types.ts
src/styles/: app.css  fonts.css  global.css  tokens.css
src/views/: DashboardView.tsx  HistoryView.tsx  HomeView.tsx  LibraryView.tsx  Onboarding.tsx  SettingsView.tsx
