[package]
name = "sqz"
version = "1.1.10"
description = "Squeeze your video library. Reclaim disk space. Never lose a file."
authors = ["sqz contributors"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

# The library holds the whole app so the engine can be unit-tested without the
# Tauri shell. `main.rs` is a thin binary that calls into it.
[lib]
name = "sqz_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
trash = "5"
filetime = "0.2"
# Open a file with its default app / reveal it in the file manager. Native and
# cross-platform, with none of the plugin's path-scope gating.
opener = { version = "0.7", features = ["reveal"] }
# On-demand FFmpeg download + extraction (so the app itself ships tiny).
ureq = "2"
zip = "2"
# The engine is thread-based, so no async runtime is needed in the core; Tauri
# brings its own for the shell.
uuid = { version = "1", features = ["v4"] }
# Password hashing for locked mode (salted, memory-hard KDF).
# `std` pulls in getrandom-backed OsRng for salt generation.
argon2 = { version = "0.5", features = ["std"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
walkdir = "2"
# Local wall-clock conversion for Daily unattended schedules (already in the tree
# via iana-time-zone; the `clock` default feature gives us `Local`).
chrono = "0.4"

# Linux ffmpeg builds ship as .tar.xz; other platforms use zip.
[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
tar = "0.4"
xz2 = "0.1"

# System input-idle probe for unattended mode (GetLastInputInfo). Windows only;
# other platforms report "always idle" and never link this.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_SystemInformation",
] }

[features]
# Enable custom protocol in production; keep default off for dev.
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "s"     # optimize for size — this is a desktop app, not a hot loop
lto = true
codegen-units = 1
panic = "abort"
strip = true
